# satisfaction

./: Cargo.toml  README.md  dist-workspace.toml  gen_examples.sh
src/: cnf.rs  digraph.rs  dpll.rs  main.rs  plot.rs  rand_cnf.rs
