[package]
name = "satisfaction"
repository = "https://github.com/tchaumeny/satisfaction"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.14.0"
plotters = "0.3.7"
rand = "0.8.5"
slugify = "0.1.0"

[[bin]]
name = "satisfaction"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
